# GameOfLife

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: main.cpp
include/utils/: random.hpp
